--- a/spotify_passport/Cargo.toml
+++ b/spotify_passport/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
-name = "actix"
+name = "spotify_passport"
 version = "0.1.0"
 authors = ["Marcelo Almeida <mgba@umich.edu>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "spotify_lib"
+path = "src/lib.rs"
+
 
 [dependencies]
 actix-web = "2.0"
