--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ name = "spotify_lib"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = "2.0"
+actix-web = { version = "2.0", features = ["openssl"] }
 actix-rt = "1.0"
 actix-session = "0.3.0"
 actix-files = "0.2.2"
+awc = "1.0.1"
 # serde_derive = "1.0.112"
 serde = { version = "1.0.112", features = ["derive"] }
 oauth2 = "3.0"
