--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,7 @@ actix-rt = "1.0"
 actix-session = "0.3.0"
 actix-files = "0.2.2"
 awc = "1.0.1"
-# serde_derive = "1.0.112"
-serde = { version = "1.0.112", features = ["derive"] }
+# serde_derive = "1.0.114"
+serde = { version = "1.0.114", features = ["derive"] }
+serde_json = "1.0.55"
 oauth2 = "3.0"
-
-[[example]]
-name = "oauth"
-path = "src/oauth/example.rs"
-
-[[example]]
-name = "test"
-path = "src/oauth/auth.rs"
