--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ actix-rt = "1.0"
 actix-session = "0.3.0"
 actix-files = "0.2.2"
 awc = "1.0.1"
-# serde_derive = "1.0.114"
+oauth2 = "3.0"
 serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0.55"
-oauth2 = "3.0"
+urlencoding = "1.1.1"
+regex = "1.3.9"
